--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 									    <div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingSeven">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">Learning to search in long documents
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">Crime in San-Francisco
 									            </a>
 									        </h4>
 									    </div>
