--- a/index.html
+++ b/index.html
@@ -343,16 +343,16 @@
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Run-time-Speech-conversion
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Speech-Recognition
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-									        	<a href="https://github.com/GauravMundhra/Run-time-speech-conversion/blob/master/R%26D%20S2S.pdf" target="=_blank">Presentation & Description</a><br>
-									            <a href="https://github.com/GauravMundhra/Run-time-speech-conversion/tree/master/py%20notebook" target="_blank">Python notebook of model</a><br>
-									            <a href="https://github.com/GauravMundhra/Run-time-speech-conversion/blob/master/R%26D%20%20Progress%20Report%20.pdf" target="=_blank">Report</a><br>
-									            <a href="https://github.com/GauravMundhra/Run-time-speech-conversion/blob/master/R%26D%20Project%20Summary.pdf" target="=_blank">Summary</a><br>
+									        	<a href=https://github.com/GauravMundhra/Speech-recognition/blob/master/R%26D%20S2S.pdf" target="=_blank">Presentation & Description</a><br>
+									            <a href="https://github.com/GauravMundhra/Speech-recognition/tree/master/py%20notebook" target="_blank">Python notebook of model</a><br>
+									            <a href="https://github.com/GauravMundhra/Speech-recognition/master/R%26D%20%20Progress%20Report%20.pdf" target="=_blank">Report</a><br>
+									            <a href="https://github.com/GauravMundhra/Speech-recognition/blob/master/R%26D%20Project%20Summary.pdf" target="=_blank">Summary</a><br>
 									    </div>
 									</div></div>
 
