--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 									    </div>
 									    <div id="collapseTen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTen">
 									        <div class="panel-body">
-									        	<a href="https://github.com/GauravMundhra/Android_Game_/blob/master/OS.pdf" target="=_blank">Presentaion and Project</a><br>
+									        	<a href="https://github.com/GauravMundhra/Android_Game_" target="=_blank">Presentaion and Project</a><br>
 									           
 									    </div>
 									</div></div>
