--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 									            <div class="row">
 										      		<div class="col-md-6">
 										      			<a href ="https://github.com/neemrana-circle/Website/blob/master/brochure_neemrana_circle.pdf" target="_blank"> Brochure </a><br>
-										      			<a href ="hhttps://github.com/neemrana-circle/Website" target="_blank">Website Project</a><br>
+										      			<a href ="https://github.com/neemrana-circle/Website" target="_blank">Website Project</a><br>
 										      			
 										      		
 										      	</div>
