--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Secondary Education</a> <span>2003-2015</span></h2>
+					               	<h2><a href="#">Secondary Education</a> <span>2003-2013</span></h2>
 					                  All saints High School,<br>Maharashtra
 									            <ul>
 														<li>CBSE Board</li>
@@ -543,7 +543,7 @@
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">gauravmundhra111@gmail.com.com</a></p>
+									<p><a href="#">gauravmundhra111@gmail.com</a></p>
 								</div>
 							</div>
 
