--- a/index.html
+++ b/index.html
@@ -146,9 +146,12 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Data Science Intern</a> <span>Feb 2016-Present</span></h2>
-					                  		NIIT University, Neemrana, Rajasthan 
-										      				Specialisation - Data Science
+					                  <h2><a href="#">Data Science Internship</a> <span>Feb 2016-Present</span></h2>
+							       <h3> Genpact, Bangalore </h3><br>
+							       Automated a client's Invoice process which took 60 hours per week and traced it down to 5-6 minutes
+								using pytesseract (python OCR library) , numpy , pandas. Used Power BI and pandas for interactive visualizations and intelligence for various business problems.
+								Implemented two django based framework for client. 
+							       	Worked with VBA.
 					               </div>
 					            </div>
 					         </article>
