--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
 
 					               <div class="timeline-label">
 					                  <h2><a href="#">Data Science Internship</a> <span>Feb 2016-Present</span></h2>
-							       <h3> Genpact, Bangalore </h3><br>
+							       <h3> Genpact, Bangalore </h3>
 							       Automated a client's Invoice process which took 60 hours per week and traced it down to 5-6 minutes
-								using pytesseract (python OCR library) , numpy , pandas. Used Power BI and pandas for interactive visualizations and intelligence for various business problems.
-								Implemented two django based framework for client. 
+								using pytesseract (python OCR library) , numpy , pandas.<br> Used Power BI and pandas for interactive visualizations and intelligence for various business problems.<br>
+								Implemented two django based framework for client. <br>
 							       	Worked with VBA.
 					               </div>
 					            </div>
