--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Gaurav</h1>
-						   					<h2><b>Upcoming Data Scientist <a href="https://colorlib.com/" target="_blank"></a></h2>
+						   					<h2><b>Data Scientist <a href="https://colorlib.com/" target="_blank"></a></h2>
 												<p><a href ="images/Gaurav_Resume.pdf"class="btn btn-primary btn-learn" target="_blank_">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
